--- a/assessment.html
+++ b/assessment.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <h1>あなたの良いところは？</h1>
-    <p>診断したい名前を入れて下さい</p>
+    <h1>あなたの良いところを診断します</h1>
+    <p>診断したいあなたの名前を入れて下さい</p>
     <input type="text" id="user-name" size="40" maxlength="20">
     <button id="assessment">診断する</button>
     <div id="result-area"></div>
